crates/rspdl-ko/src/parser.rs
use serde::Serialize;

use crate::ast::*;
use crate::frontmatter;
use crate::scanner::{Token, TokenKind, scan};
use crate::{Diagnostic, Span};

#[derive(Clone, Debug, Eq, PartialEq, Serialize)]
pub struct ParseOutput {
    pub document: Option<DocumentAst>,
    pub diagnostics: Vec<Diagnostic>,
}

#[derive(Clone, Debug)]
pub(crate) struct Line {
    pub(crate) indent: usize,
    pub(crate) tokens: Vec<Token>,
    pub(crate) span: Span,
}

pub fn parse(source: &str) -> ParseOutput {
    // 머리말을 먼저 떼어 낸다. 남은 원문은 머리말 구간이 공백으로 덮인 같은 길이의 문자열이라
    // 이후 scanner 가 만드는 span 이 파일 기준으로 그대로 맞는다.
    let head = frontmatter::read(source);
    let frontmatter = head.frontmatter;
    let mut diagnostics = head.diagnostics;

    let scanned = scan(head.source.as_ref());
    diagnostics.extend(scanned.diagnostics);
    let lines = logical_lines(&scanned.tokens);
    let mut cursor = 0usize;

    // 모듈은 머리말의 `모듈` 키에서 오거나 `@모듈` 줄에서 온다. 둘은 같은 사실이므로 함께
    // 있을 수 없다.
    let declared_in_frontmatter = frontmatter
        .as_ref()
        .and_then(|frontmatter| frontmatter.module.clone());

    let module = match declared_in_frontmatter {
        Some(declaration) => {
            if let Some(line) = lines.first()
                && word_at(line, 0) == Some("@모듈")
            {
                diagnostics.push(Diagnostic::error(
                    "RSPDL-KO-FM-010",
                    "ko.frontmatter.module_declared_twice",
                    line.span,
                ));
                // 같은 사실을 두 번 읽지 않는다. 남겨 두면 알 수 없는 최상위 선언으로 또 한 번
                // 진단이 난다.
                cursor += 1;
            }
            let span = declaration.span;
            ModuleAst { declaration, span }
        }
        None => {
            let Some(module_line) = lines.first() else {
                diagnostics.push(Diagnostic::error(
                    "RSPDL-KO-SYN-001",
                    "ko.syntax.module_required",
                    Span::default(),
                ));
                return ParseOutput {
                    document: None,
                    diagnostics,
                };
            };
            let module = match parse_module(module_line, &mut diagnostics) {
                Ok(module) => module,
                Err(diagnostic) => {
                    diagnostics.push(diagnostic);
                    return ParseOutput {
                        document: None,
                        diagnostics,
                    };
                }
            };
            cursor += 1;
            module
        }
    };

    let mut declarations = Vec::new();
    while cursor < lines.len() {
        let line = &lines[cursor];
        if line.indent != 0 {
            diagnostics.push(Diagnostic::error(
                "RSPDL-KO-SYN-002",
                "ko.syntax.unexpected_top_level_indent",
                line.span,
            ));
            cursor += 1;
            continue;
        }

        let block_end = (cursor + 1..lines.len())
            .find(|index| lines[*index].indent == 0)
            .unwrap_or(lines.len());
        let body = &lines[cursor + 1..block_end];
        let kind = declaration_kind(line);
        let result = match kind {
            Some(DeclarationKind::Statement) => {
                crate::statement::parse(line, body).map(DeclarationAst::Statement)
            }
            Some(DeclarationKind::Enum) => {
                parse_enum(line, body, &mut diagnostics).map(DeclarationAst::Enum)
            }
            Some(DeclarationKind::DataModel) => {
                parse_model(line, body, &mut diagnostics).map(DeclarationAst::DataModel)
            }
            Some(DeclarationKind::Relation) => {
                parse_relation(line, body, &mut diagnostics).map(DeclarationAst::Relation)
            }
            Some(DeclarationKind::RelationalConstraint(kind)) => {
                parse_relational_constraint(line, body, kind)
                    .map(DeclarationAst::RelationalConstraint)
            }
            Some(DeclarationKind::Screen) => {
                parse_screen(line, body, &mut diagnostics).map(DeclarationAst::Screen)
            }
            Some(DeclarationKind::ActionDataMutation) => {
                parse_action_data_mutation(line, body).map(DeclarationAst::ActionDataMutation)
            }
            Some(DeclarationKind::SumDerivation) => {
                parse_sum_derivation(line, body).map(DeclarationAst::SumDerivation)
            }
            Some(DeclarationKind::Recalculation) => {
                parse_recalculation(line, body).map(DeclarationAst::Recalculation)
            }
            Some(DeclarationKind::FieldIntent) => {
                parse_field_intent(line, body).map(DeclarationAst::FieldIntent)
            }
            Some(DeclarationKind::Constraint) => {
                parse_constraint(line, body, &mut diagnostics).map(DeclarationAst::Constraint)
            }
            Some(DeclarationKind::Role) => {
                parse_role(line, body, &mut diagnostics).map(|declaration| {
                    DeclarationAst::Role(RoleAst {
                        declaration,
                        span: line.span,
                    })
                })
            }
            Some(DeclarationKind::Action) => {
                parse_action(line, body, &mut diagnostics).map(|declaration| {
                    DeclarationAst::Action(ActionAst {
                        declaration,
                        span: line.span,
                    })
                })
            }
            Some(DeclarationKind::Event) => {
                parse_event(line, body, &mut diagnostics).map(|declaration| {
                    DeclarationAst::Event(EventAst {
                        declaration,
                        span: line.span,
                    })
                })
            }
            Some(DeclarationKind::ActionInput) => {
                parse_action_input(line, body, &mut diagnostics).map(DeclarationAst::ActionInput)
            }
            Some(DeclarationKind::EventInput) => {
                parse_event_input(line, body, &mut diagnostics).map(DeclarationAst::EventInput)
            }
            Some(DeclarationKind::CreationBranch) => {
                parse_creation_branch(line, body, &mut diagnostics)
                    .map(DeclarationAst::CreationBranch)
            }
            Some(DeclarationKind::FieldProducer) => {
                parse_field_producer(line, body, &mut diagnostics)
                    .map(DeclarationAst::FieldProducer)
            }
            Some(DeclarationKind::RelationProducer) => {
                parse_relation_producer(line, body, &mut diagnostics)
                    .map(DeclarationAst::RelationProducer)
            }
            Some(DeclarationKind::Policy) => {
                parse_policy(line, body, &mut diagnostics).map(DeclarationAst::Policy)
            }
            _ if word_at(line, 0).is_some_and(|word| word.starts_with('@')) => {
                Err(Diagnostic::error(
                    "RSPDL-KO-SYN-003",
                    "ko.syntax.domain_annotation_forbidden",
                    line.span,
                )
                .with_argument("annotation", word_at(line, 0).unwrap_or("@")))
            }
            _ => Err(Diagnostic::error(
                "RSPDL-KO-SYN-003",
                "ko.syntax.unknown_top_level_declaration",
                line.span,
            )),
        };
        match result {
            Ok(declaration) => declarations.push(declaration),
            Err(diagnostic) => diagnostics.push(diagnostic),
        }

        let expects_block = matches!(
            kind,
            Some(DeclarationKind::Enum | DeclarationKind::DataModel | DeclarationKind::Statement)
        );
        if expects_block {
            cursor = block_end;
        } else {
            cursor += 1;
        }
    }

    ParseOutput {
        document: Some(DocumentAst {
            frontmatter,
            module,
            declarations,
        }),
        diagnostics,
    }
}

fn logical_lines(tokens: &[Token]) -> Vec<Line> {
    let mut lines = Vec::new();
    let mut indent = 0usize;
    let mut current: Vec<Token> = Vec::new();
    for token in tokens {
        match token.kind {
            TokenKind::Indent => indent += 1,
            TokenKind::Dedent => indent = indent.saturating_sub(1),
            TokenKind::Newline => {
                if let (Some(first), Some(last)) = (current.first(), current.last()) {
                    lines.push(Line {
                        indent,
                        span: first.span.join(last.span),
                        tokens: std::mem::take(&mut current),
                    });
                }
            }
            _ => current.push(token.clone()),
        }
    }
    lines
}

#[derive(Clone, Copy)]
enum DeclarationKind {
    Statement,
    Enum,
    DataModel,
    Relation,
    RelationalConstraint(RelationalConstraintDeclarationKind),
    Screen,
    ActionDataMutation,
    SumDerivation,
    Recalculation,
    FieldIntent,
    Constraint,
    Role,
    Action,
    Event,
    ActionInput,
    EventInput,
    CreationBranch,
    FieldProducer,
    RelationProducer,
    Policy,
}

#[derive(Clone, Copy)]
enum RelationalConstraintDeclarationKind {
    NonEmpty,
    Required,
    Unique,
    Exclusive,
    Exhaustive,
    Coexistent,
}

fn declaration_kind(line: &Line) -> Option<DeclarationKind> {
    match word_at(line, 0) {
        _ if crate::statement::is_header(line) => Some(DeclarationKind::Statement),
        _ if is_enum_header(line) => Some(DeclarationKind::Enum),
        _ if is_data_model_header(line) => Some(DeclarationKind::DataModel),
        _ if is_role_sentence(line) => Some(DeclarationKind::Role),
        _ if is_action_sentence(line) => Some(DeclarationKind::Action),
        _ if is_event_sentence(line) => Some(DeclarationKind::Event),
        _ if is_action_input_sentence(line) => Some(DeclarationKind::ActionInput),
        _ if is_event_input_sentence(line) => Some(DeclarationKind::EventInput),
        _ if is_creation_branch_sentence(line) => Some(DeclarationKind::CreationBranch),
        _ if is_template_producer_sentence(line) => Some(DeclarationKind::FieldProducer),
        _ if is_field_producer_sentence(line) => Some(DeclarationKind::FieldProducer),
        _ if is_relation_producer_sentence(line) => Some(DeclarationKind::RelationProducer),
        _ if is_relation_sentence(line) => Some(DeclarationKind::Relation),
        _ if is_nonempty_sentence(line) => Some(DeclarationKind::RelationalConstraint(
            RelationalConstraintDeclarationKind::NonEmpty,
        )),
        _ if is_required_relation_sentence(line) => Some(DeclarationKind::RelationalConstraint(
            RelationalConstraintDeclarationKind::Required,
        )),
        _ if is_unique_relation_sentence(line) => Some(DeclarationKind::RelationalConstraint(
            RelationalConstraintDeclarationKind::Unique,
        )),
        _ if is_exclusive_relation_sentence(line) => Some(DeclarationKind::RelationalConstraint(
            RelationalConstraintDeclarationKind::Exclusive,
        )),
        _ if is_exhaustive_relation_sentence(line) => Some(DeclarationKind::RelationalConstraint(
            RelationalConstraintDeclarationKind::Exhaustive,
        )),
        _ if is_coexistent_relation_sentence(line) => Some(DeclarationKind::RelationalConstraint(
            RelationalConstraintDeclarationKind::Coexistent,
        )),
        _ if is_screen_sentence(line) => Some(DeclarationKind::Screen),
        _ if is_action_data_mutation_sentence(line) => Some(DeclarationKind::ActionDataMutation),
        _ if is_recalculation_sentence(line) => Some(DeclarationKind::Recalculation),
        _ if is_sum_derivation_sentence(line) => Some(DeclarationKind::SumDerivation),
        _ if is_field_intent_sentence(line) => Some(DeclarationKind::FieldIntent),
        _ if is_rule_sentence(line) => {
            if is_policy_sentence(line) {
                Some(DeclarationKind::Policy)
            } else {
                Some(DeclarationKind::Constraint)
            }
        }
        _ => None,
    }
}

fn parse_relation(
    line: &Line,
    body: &[Line],
    diagnostics: &mut Vec<Diagnostic>,
) -> Result<RelationAst, Diagnostic> {
    reject_sentence_body(body, line.span, "relation")?;
    let tokens = sentence_tokens(line)?;
    let mut cursor = BodyCursor::new(tokens, line.span);
    let (source_model, source_marker) = cursor.marked_ref(&["은", "는"])?;
    let unary = is_unary_relation_sentence(line);
    let (target_model, target_marker) = if unary {
        (None, None)
    } else {
        let (model, marker) = cursor.marked_ref(&["을", "를"])?;
        (Some(model), Some(marker))
    };
    let id_index = tokens
        .iter()
        .enumerate()
        .skip(cursor.index)
        .find_map(|(index, token)| matches!(token.kind, TokenKind::CanonicalId(_)).then_some(index))
        .ok_or_else(|| {
            Diagnostic::error(
                "RSPDL-KO-SYN-070",
                "ko.syntax.relation_stable_id_required",
                line.span,
            )
        })?;
    let declaration = parse_name_with_id_tokens(tokens, cursor.index, id_index, line.span)?;
    cursor.index = id_index + 1;
    let mut parameter_models = vec![source_model.clone()];
    if unary {
        cursor.expect_word("에")?;
        cursor.expect_word("해당할")?;
    } else {
        match cursor.next_word() {
            Some("로" | "으로") => {}
            _ => return Err(cursor.error("ko.syntax.relation_direction_marker_required")),
        }
        cursor.expect_word("가질")?;
        parameter_models.push(
            target_model
                .clone()
                .expect("binary relation has a target model"),
        );
    }
    cursor.expect_word("수")?;
    cursor.expect_word("있다")?;
    cursor.expect_end()?;
    lint_marker(
        &source_model,
        &source_marker,
        "은",
        "는",
        line.span,
        diagnostics,
    );
    if let (Some(model), Some(marker)) = (&target_model, &target_marker) {
        lint_marker(model, marker, "을", "를", line.span, diagnostics);
    }
    Ok(RelationAst {
        declaration,
        parameter_models,
        span: line.span,
    })
}

fn parse_relational_constraint(
    line: &Line,
    body: &[Line],
    kind: RelationalConstraintDeclarationKind,
) -> Result<RelationalConstraintAst, Diagnostic> {
    reject_sentence_body(body, line.span, "relational_constraint")?;
    let tokens = sentence_tokens(line)?;
    let mut cursor = BodyCursor::new(tokens, line.span);
    let constraint = match kind {
        RelationalConstraintDeclarationKind::NonEmpty => {
            let (model, _) = cursor.marked_ref(&["은", "는"])?;
            cursor.expect_word("하나")?;
            cursor.expect_word("이상")?;
            cursor.expect_word("존재해야")?;
            cursor.expect_word("한다")?;
            cursor.expect_end()?;
            RelationalConstraintKindAst::NonEmpty { model }
        }
        RelationalConstraintDeclarationKind::Required => {
            cursor.expect_word("모든")?;
            let (model, _) = cursor.marked_ref(&["은", "는"])?;
            let (relation, _) = cursor.marked_ref(&["을", "를"])?;
            cursor.expect_word("하나")?;
            cursor.expect_word("이상")?;
            cursor.expect_word("가져야")?;
            cursor.expect_word("한다")?;
            cursor.expect_end()?;
            RelationalConstraintKindAst::Required { model, relation }
        }
        RelationalConstraintDeclarationKind::Unique => {
            cursor.expect_word("각")?;
            let (model, _) = cursor.marked_ref(&["은", "는"])?;
            let (relation, _) = cursor.marked_ref(&["을", "를"])?;
            cursor.expect_word("최대")?;
            cursor.expect_word("하나만")?;
            cursor.expect_word("가질")?;
            cursor.expect_word("수")?;
            cursor.expect_word("있다")?;
            cursor.expect_end()?;
            RelationalConstraintKindAst::Unique { model, relation }
        }
        RelationalConstraintDeclarationKind::Exclusive => {
            let separator = group_separator(tokens, 6, line.span)?;
            let relations = relation_group(&tokens[..separator], line.span)?;
            cursor.index = separator + 1;
            cursor.expect_word("둘")?;
            cursor.expect_word("이상은")?;
            cursor.expect_word("동시에")?;
            cursor.expect_word("성립할")?;
            cursor.expect_word("수")?;
            cursor.expect_word("없다")?;
            cursor.expect_end()?;
            RelationalConstraintKindAst::Exclusive { relations }
        }
        RelationalConstraintDeclarationKind::Exhaustive => {
            let separator = group_separator(tokens, 5, line.span)?;
            let relations = relation_group(&tokens[..separator], line.span)?;
            cursor.index = separator + 1;
            cursor.expect_word("하나")?;
            cursor.expect_word("이상은")?;
            cursor.expect_word("항상")?;
            cursor.expect_word("성립해야")?;
            cursor.expect_word("한다")?;
            cursor.expect_end()?;
            RelationalConstraintKindAst::Exhaustive { relations }
        }
        RelationalConstraintDeclarationKind::Coexistent => {
            let suffix_len = 4;
            let prefix_end = tokens.len().checked_sub(suffix_len).ok_or_else(|| {
                Diagnostic::error(
                    "RSPDL-KO-SYN-071",
                    "ko.syntax.relational_constraint_group_references",
                    line.span,
                )
            })?;
            let (references, _) =
                strip_final_marker(&tokens[..prefix_end], &["은", "는"], line.span)?;
            let relations = relation_group(&references, line.span)?;
            cursor.index = prefix_end;
            cursor.expect_word("동시에")?;
            cursor.expect_word("성립할")?;
            cursor.expect_word("수")?;
            cursor.expect_word("있다")?;
            cursor.expect_end()?;
            RelationalConstraintKindAst::Coexistent { relations }
        }
    };
    Ok(RelationalConstraintAst {
        constraint,
        span: line.span,
    })
}

fn relation_group(tokens: &[Token], span: Span) -> Result<Vec<String>, Diagnostic> {
    let references = parse_reference_list(tokens, span)?;
    if references.len() >= 2 {
        Ok(references)
    } else {
        Err(Diagnostic::error(
            "RSPDL-KO-SYN-071",
            "ko.syntax.relational_constraint_group_references",
            span,
        ))
    }
}

fn group_separator(tokens: &[Token], tail_len: usize, span: Span) -> Result<usize, Diagnostic> {
    let separator = tokens
        .len()
        .checked_sub(tail_len + 1)
        .filter(|index| matches!(&tokens[*index].kind, TokenKind::Word(word) if word == "중"));
    separator.ok_or_else(|| {
        Diagnostic::error(
            "RSPDL-KO-SYN-071",
            "ko.syntax.relational_constraint_group_references",
            span,
        )
    })
}

fn strip_final_marker(
    tokens: &[Token],
    markers: &[&str],
    span: Span,
) -> Result<(Vec<Token>, String), Diagnostic> {
    let mut values = tokens.to_vec();
    if values.is_empty() {
        return Err(Diagnostic::error(
            "RSPDL-KO-SYN-071",
            "ko.syntax.reference_list_required",
            span,
        ));
    }
    let separate_marker = match values.as_slice() {
        [
            ..,
            Token {
                kind: TokenKind::QuotedIdentifier(_),
                ..
            },
            Token {
                kind: TokenKind::Word(word),
                ..
            },
        ] if markers.contains(&word.as_str()) => Some(word.clone()),
        _ => None,
    };
    if let Some(marker) = separate_marker {
        values.pop();
        return Ok((values, marker));
    }
    let last = values.last_mut().expect("values is not empty");
    if let TokenKind::Word(word) = &mut last.kind
        && let Some((base, marker)) = markers.iter().find_map(|marker| {
            word.strip_suffix(marker)
                .filter(|base| !base.is_empty())
                .map(|base| (base.to_owned(), (*marker).to_owned()))
        })
    {
        *word = base;
        return Ok((values, marker));
    }
    Err(Diagnostic::error(
        "RSPDL-KO-SYN-071",
        "ko.syntax.reference_list_final_marker_required",
        span,
    ))
}

fn parse_reference_list(tokens: &[Token], span: Span) -> Result<Vec<String>, Diagnostic> {
    if tokens.is_empty() {
        return Err(Diagnostic::error(
            "RSPDL-KO-SYN-071",
            "ko.syntax.reference_list_required",
            span,
        ));
    }
    let mut values = Vec::new();
    let mut start = 0;
    for end in 0..=tokens.len() {
        if end != tokens.len() && !matches!(tokens[end].kind, TokenKind::Comma) {
            continue;
        }
        if start == end {
            return Err(Diagnostic::error(
                "RSPDL-KO-SYN-071",
                "ko.syntax.reference_list_empty_name",
                span,
            ));
        }
        let mut parts = Vec::new();
        for token in &tokens[start..end] {
            match &token.kind {
                TokenKind::Word(value) | TokenKind::QuotedIdentifier(value) => {
                    parts.push(value.clone());
                }
                _ => {
                    return Err(Diagnostic::error(
                        "RSPDL-KO-SYN-071",
                        "ko.syntax.reference_list_invalid",
                        token.span,
                    ));
                }
            }
        }
        values.push(parts.join(" "));
        start = end + 1;
    }
    Ok(values)
}

fn is_screen_sentence(line: &Line) -> bool {
    line.tokens
        .iter()
        .position(|token| matches!(token.kind, TokenKind::CanonicalId(_)))
        .and_then(|index| word_at(line, index + 1))
        == Some("에서는")
        && last_sentence_word(line, 0) == Some("있다")
        && last_sentence_word(line, 1) == Some("수")
}

fn is_action_data_mutation_sentence(line: &Line) -> bool {
    let operation = last_sentence_word(line, 0);
    matches!(operation, Some("생성한다" | "수정한다" | "삭제한다"))
        && line
            .tokens
            .iter()
            .any(|token| matches!(&token.kind, TokenKind::Word(word) if word == "실행되면"))
}

fn is_enum_header(line: &Line) -> bool {
    sentence_words_end_with(line, &["다음", "값", "중", "하나다"])
}

fn is_role_sentence(line: &Line) -> bool {
    sentence_words_end_with(line, &["역할이다"])
}

fn is_action_sentence(line: &Line) -> bool {
    sentence_words_end_with(line, &["행동이다"])
}

fn is_event_sentence(line: &Line) -> bool {
    sentence_words_end_with(line, &["사건이다"])
}

fn is_action_input_sentence(line: &Line) -> bool {
    sentence_words_end_with(line, &["입력받는다"])
}

fn is_event_input_sentence(line: &Line) -> bool {
    sentence_words_end_with(line, &["담는다"])
}

fn is_creation_branch_sentence(line: &Line) -> bool {
    let ends_with_creation = last_sentence_word(line, 0) == Some("생성한다")
        || (last_sentence_word(line, 0) == Some("않는다")
            && last_sentence_word(line, 1) == Some("생성하지"));
    ends_with_creation
        && line.tokens.iter().any(|token| {
            matches!(&token.kind, TokenKind::Word(word) if matches!(word.as_str(), "이면" | "라면") || word.ends_with("이면") || word.ends_with("라면"))
        })
}

fn is_field_producer_sentence(line: &Line) -> bool {
    last_sentence_word(line, 0) == Some("기록한다")
        && line.tokens.iter().any(|token| {
            matches!(&token.kind, TokenKind::Word(word)
                if matches!(word.as_str(), "실행될" | "발생할" | "이면" | "라면")
                    || word.ends_with("이면") || word.ends_with("라면"))
        })
}

fn is_template_producer_sentence(line: &Line) -> bool {
    last_sentence_word(line, 0) == Some("조합한다")
        && line
            .tokens
            .iter()
            .any(|token| matches!(token.kind, TokenKind::StringLiteral(_)))
        && line
            .tokens
            .iter()
            .any(|token| matches!(&token.kind, TokenKind::Word(word) if matches!(word.as_str(), "실행될" | "발생할")))
}

fn is_relation_producer_sentence(line: &Line) -> bool {
    last_sentence_word(line, 0) == Some("연결한다")
        && line
            .tokens
            .iter()
            .any(|token| matches!(&token.kind, TokenKind::Word(word) if matches!(word.as_str(), "실행될" | "발생할")))
}

fn is_relation_sentence(line: &Line) -> bool {
    is_binary_relation_sentence(line) || is_unary_relation_sentence(line)
}

fn is_binary_relation_sentence(line: &Line) -> bool {
    let Some(id_index) = line
        .tokens
        .iter()
        .position(|token| matches!(token.kind, TokenKind::CanonicalId(_)))
    else {
        return false;
    };
    matches!(word_at(line, id_index + 1), Some("로" | "으로"))
        && sentence_words_end_with(line, &["가질", "수", "있다"])
}

fn is_unary_relation_sentence(line: &Line) -> bool {
    let Some(id_index) = line
        .tokens
        .iter()
        .position(|token| matches!(token.kind, TokenKind::CanonicalId(_)))
    else {
        return false;
    };
    word_at(line, id_index + 1) == Some("에")
        && sentence_words_end_with(line, &["해당할", "수", "있다"])
}

fn is_nonempty_sentence(line: &Line) -> bool {
    sentence_words_end_with(line, &["하나", "이상", "존재해야", "한다"])
}

fn is_required_relation_sentence(line: &Line) -> bool {
    word_at(line, 0) == Some("모든")
        && sentence_words_end_with(line, &["하나", "이상", "가져야", "한다"])
}

fn is_unique_relation_sentence(line: &Line) -> bool {
    word_at(line, 0) == Some("각")
        && sentence_words_end_with(line, &["최대", "하나만", "가질", "수", "있다"])
}

fn is_exclusive_relation_sentence(line: &Line) -> bool {
    sentence_words_end_with(
        line,
        &["중", "둘", "이상은", "동시에", "성립할", "수", "없다"],
    )
}

fn is_exhaustive_relation_sentence(line: &Line) -> bool {
    sentence_words_end_with(line, &["중", "하나", "이상은", "항상", "성립해야", "한다"])
}

fn is_coexistent_relation_sentence(line: &Line) -> bool {
    sentence_words_end_with(line, &["동시에", "성립할", "수", "있다"])
        && !is_binary_relation_sentence(line)
}

fn sentence_words_end_with(line: &Line, suffix: &[&str]) -> bool {
    let words = line
        .tokens
        .iter()
        .filter_map(|token| match &token.kind {
            TokenKind::Word(word) => Some(word.as_str()),
            _ => None,
        })
        .collect::<Vec<_>>();
    words.ends_with(suffix)
}

fn is_sum_derivation_sentence(line: &Line) -> bool {
    last_sentence_word(line, 0) == Some("계산한다")
        && line
            .tokens
            .iter()
            .any(|token| matches!(&token.kind, TokenKind::Word(word) if word == "합계로"))
}

fn is_recalculation_sentence(line: &Line) -> bool {
    last_sentence_word(line, 0) == Some("계산한다") && last_sentence_word(line, 1) == Some("다시")
}

fn is_field_intent_sentence(line: &Line) -> bool {
    let words = line
        .tokens
        .iter()
        .filter_map(|token| match &token.kind {
            TokenKind::Word(word) => Some(word.as_str()),
            _ => None,
        })
        .collect::<Vec<_>>();
    words.ends_with(&["내부", "관리에만", "사용한다"])
        || words.ends_with(&["사용자", "화면에서", "조회하지", "않는다"])
}

fn is_data_model_header(line: &Line) -> bool {
    if word_at(line, 0).is_some_and(|word| word.starts_with('@')) {
        return false;
    }
    let words = line
        .tokens
        .iter()
        .filter_map(|token| match &token.kind {
            TokenKind::Word(word) => Some(word.as_str()),
            _ => None,
        })
        .collect::<Vec<_>>();
    words.ends_with(&["다음", "필드들로", "구성되어", "있다"])
}

fn is_rule_sentence(line: &Line) -> bool {
    matches!(last_sentence_word(line, 0), Some("한다" | "있다" | "없다"))
}

fn is_policy_sentence(line: &Line) -> bool {
    matches!(last_sentence_word(line, 0), Some("있다" | "없다"))
        && last_sentence_word(line, 1) == Some("수")
}

fn parse_module(line: &Line, _diagnostics: &mut Vec<Diagnostic>) -> Result<ModuleAst, Diagnostic> {
    if line.indent != 0 {
        return Err(Diagnostic::error(
            "RSPDL-KO-SYN-001",
            "ko.syntax.module_header_required",
            line.span,
        ));
    }
    let declaration = parse_annotated_name(line, "@모듈")?;
    Ok(ModuleAst {
        declaration,
        span: line.span,
    })
}

fn parse_enum(
    line: &Line,
    body: &[Line],
    diagnostics: &mut Vec<Diagnostic>,
) -> Result<EnumAst, Diagnostic> {
    let declaration = parse_natural_header(line, &["다음", "값", "중", "하나다"], diagnostics)?;
    ensure_body(body, line.span)?;
    let mut values = Vec::new();
    for item in body {
        if item.indent != 1 {
            return Err(bad_block_indent(item));
        }
        if item
            .tokens
            .iter()
            .any(|token| matches!(token.kind, TokenKind::Period))
        {
            return Err(Diagnostic::error(
                "RSPDL-KO-SYN-012",
                "ko.syntax.item_period_forbidden",
                item.span,
            ));
        }
        let id_index = item.tokens.len().checked_sub(1).ok_or_else(|| {
            Diagnostic::error(
                "RSPDL-KO-SYN-005",
                "ko.syntax.enum_value_required",
                item.span,
            )
        })?;
        let declaration = parse_cfg_item_name(item, id_index)?;
        values.push(EnumValueAst {
            declaration,
            span: item.span,
        });
    }
    let span = line
        .span
        .join(body.last().expect("validated enum body").span);
    Ok(EnumAst {
        declaration,
        values,
        span,
    })
}

fn parse_model(
    line: &Line,
    body: &[Line],
    diagnostics: &mut Vec<Diagnostic>,
) -> Result<DataModelAst, Diagnostic> {
    let declaration =
        parse_natural_header(line, &["다음", "필드들로", "구성되어", "있다"], diagnostics)?;
    ensure_body(body, line.span)?;
    let mut fields = Vec::new();
    for item in body {
        if item.indent != 1 {
            return Err(bad_block_indent(item));
        }
        let colon_index = item
            .tokens
            .iter()
            .position(|token| matches!(token.kind, TokenKind::Colon))
            .ok_or_else(|| {
                Diagnostic::error(
                    "RSPDL-KO-SYN-010",
                    "ko.syntax.field_colon_required",
                    item.span,
                )
            })?;
        let id_index = colon_index.checked_sub(1).ok_or_else(|| {
            Diagnostic::error(
                "RSPDL-KO-SYN-010",
                "ko.syntax.field_shape_required",
                item.span,
            )
        })?;
        let field = parse_cfg_item_name(item, id_index)?;
        if item
            .tokens
            .iter()
            .any(|token| matches!(token.kind, TokenKind::Period))
        {
            return Err(Diagnostic::error(
                "RSPDL-KO-SYN-012",
                "ko.syntax.item_period_forbidden",
                item.span,
            ));
        }
        let required = match word_at(item, colon_index + 1) {
            Some("필수") => true,
            Some("선택") => false,
            _ => {
                return Err(Diagnostic::error(
                    "RSPDL-KO-SYN-010",
                    "ko.syntax.field_requiredness_required",
                    item.span,
                ));
            }
        };
        let value_type = parse_type_reference(item, colon_index + 2)?;
        fields.push(FieldAst {
            declaration: field,
            required,
            value_type,
            span: item.span,
        });
    }
    let span = line
        .span
        .join(body.last().expect("validated data model body").span);
    Ok(DataModelAst {
        declaration,
        fields,
        span,
    })
}

fn parse_screen(
    line: &Line,
    body: &[Line],
    diagnostics: &mut Vec<Diagnostic>,
) -> Result<ScreenAst, Diagnostic> {
    if !body.is_empty() {
        return Err(Diagnostic::error(
            "RSPDL-KO-SYN-060",
            "ko.syntax.screen_must_be_sentence",
            line.span,
        ));
    }
    let tokens = sentence_tokens(line)?;
    let id_index = tokens
        .iter()
        .position(|token| matches!(token.kind, TokenKind::CanonicalId(_)))
        .ok_or_else(|| {
            Diagnostic::error(
                "RSPDL-KO-SYN-061",
                "ko.syntax.screen_stable_id_required",
                line.span,
            )
        })?;
    let declaration = parse_name_with_id(line, 0, id_index)?;
    let mut cursor = BodyCursor::new(&tokens[id_index + 1..], line.span);
    cursor.expect_word("에서는")?;
    let (model, marker) = cursor.marked_ref(&["의", "을", "를"])?;
